--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=DM+Serif+Display:ital@0;1&family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="valentine-confession.css">
-        <title>Valentine Confession</title>
+        <title>Para dona coelho</title>
     </head>
     <body>
         <p class="instruction">Clique no coração!</p>
@@ -19,14 +19,14 @@
             <input id="messageState" type="checkbox" style="display:none"/>
             </label>
             <div class="message">
-                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear Crush,</h1>
+                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Querida dona coelho,</h1>
                 <p> 
                     <span>
-                        &emsp; I've been keeping this in for a while, but I think Valentine's Day is the perfect time to say it—you’re the reason my days feel brighter. Every little moment with you means more than I can put into words. Your smile, your laughter, the way you make everything feel lighter—it all makes my heart race in the best way possible.
+                        &emsp; Desde que você apareceu, meus dias ficaram mais leves e cheios de sentido. Conhecer você tá sendo uma das melhores coisas que já me aconteceu — cada detalhe seu me encanta mais. Quero te fazer feliz, agir diferente de tudo que um dia te machucou e aprender contigo a cada dia. Amo ouvir tua voz, jogar contigo, conversar por horas, admirar teu cabelo e até suas imperfeições — porque são elas que fazem você ser essa pessoa única e incrível que eu tanto gosto.
                     </span>
                     <br> <br>
                     <span>
-                        &emsp;  So, here it is… I like you, a lot. Maybe even love. Would you be my Valentine? No matter your answer, I just wanted you to know how special you are to me. You’ve filled my heart with warmth in ways I never expected, and for that, I’m grateful. But if you say yes, I promise to make every day feel like Valentine’s Day for you—to cherish you, to make you smile, and to remind you just how much you mean to me.
+                        &emsp;  Minha dona coelho que vive dormindo, meu xuxu, meu bem, minha senhorita bravinha (que me assustou com uma pergunta kkkkkk e com o seu sonho bem ciumentinho), eu não vejo a hora de te ver. Sonho em viver uma vida ao teu lado — cuidar de uma fazendinha juntos, pescar contigo, levar bronca por dormir tarde kkkkkkkkkk igualzinho no Stardew Valley. Só que dessa vez, na vida real. E com você, tudo parece possível.
                     </span>      
                 </p>
                 <br>
